commentaire design (mobile + desktop) + overflow-x bug at home

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1851,6 +1851,7 @@ section.widget {
   #container .sub-container {
     padding-left: 0;
     padding-right: 0;
+    overflow-x: hidden !important;
   }
 }
 
@@ -3094,7 +3095,9 @@ facebook-friends .user .user-img {
 .comment-holder input,
 .comment-holder textarea,
 .comment-holder .textarea {
-  width: 80%;
+  width: calc(100% - 90px);
+  width: -moz-calc(100% - 90px);
+  width: -webkit-calc(100% - 90px);
   max-width: 100%;
   margin: 0;
   padding: 7px 0 0 13px;
@@ -3129,7 +3132,10 @@ facebook-friends .user .user-img {
 
 @media (max-width: 768px) {
   .comment-holder .textarea {
-    font-size: 14px;
+    font-size: 14px; 
+    width: calc(100% - 60px);
+    width: -moz-calc(100% - 60px);
+    width: -webkit-calc(100% - 60px);
   }
 }
 
